--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,37 +9,81 @@
         /* Estilos para o menu */
         ul {
             list-style: none;
-            background-color: #333;
+            background-color: rgb(80, 80, 80);
             padding: 0;
             margin: 0;
         }
+
         li {
             display: inline-block;
             margin-right: 20px;
         }
+
         a {
             text-decoration: none;
             color: #fff;
         }
+
+        header {
+            background-color: rgb(200, 200, 200);
+            width: 100%;
+            height: 50px;
+            display: flex;
+            background-color: #EAF3EC;
+
+            position: sticky;
+            top: 0;
+        }
+
+        nav {
+            background-color: rgb(80, 80, 80);
+            width: 100%;
+            height: 50px;
+            display: flex;
+
+            position: sticky;
+            top: 0;
+        }
+
+        section div {
+            width: 80%;
+            height: 60px;
+            background-color: #3b3b3b;
+            margin: 20px auto;
+            border-radius: 15px;
+        }
+        body {
+            background-color: #EAF3EC;
+        }
+        
     </style>
 </head>
+
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Início</a></li>
+                <li><a href="#">Aprender</a></li>
+                <li><a href="#">Praticar</a></li>
+                <li><a href="#">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <!-- Menu -->
-    <nav>
-        <ul>
-            <li><a href="#">Início</a></li>
-            <li><a href="#">Aprender</a></li>
-            <li><a href="#">Praticar</a></li>
-            <li><a href="#">Contato</a></li>
-        </ul>
-    </nav>
+
 
     <!-- Conteúdo da página -->
     <main>
         <h1>O conhecimento é a chave que abre todas as portas do universo da possibilidade</h1>
-        <p>Explore nossos cursos online, aulas ao vivo e recursos educacionais. Impulsione seu aprendizado com nossa comunidade engajada e certificações reconhecidas pelo mercado. Junte-se a nós para começar sua jornada de aprendizado hoje mesmo!</p>
+        <p>Explore nossos cursos online, aulas ao vivo e recursos educacionais. Impulsione seu aprendizado com nossa
+            comunidade engajada e certificações reconhecidas pelo mercado. Junte-se a nós para começar sua jornada de
+            aprendizado hoje mesmo!</p>
         <button>Saiba mais</button>
         <button>Contate-nos</button>
     </main>
+    
 </body>
+
 </html>
