--- a/cadastro.html
+++ b/cadastro.html
@@ -5,10 +5,10 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link href="./css/main.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" type="text/css">
+    <link href="./css/main.css" rel="stylesheet">
     <title>Cadastrar - EduConnect</title>
     <link rel="icon" type="image/png" href="/images/icone.png">
 </head>
@@ -21,7 +21,7 @@
             <p>Já tem uma conta? <a class="mudardepag" href="login.html">Faça login aqui!</a></p>
             
             <form>
-                <label for="email">E-mail:</label><br>
+                <label for="Email">E-mail:</label><br>
                 <input placeholder="Digite seu E-mail" class="campo" type="email" id="Email" name="Email" required><br>
                 <label for="nome">Nome:</label><br>
                 <input placeholder="Digite seu nome" class="campo" type="text" id="nome" name="nome" required><br>
