--- a/login.html
+++ b/login.html
@@ -8,14 +8,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link href="./css/main.css" rel="stylesheet" />
+    <link href="./css/cadastro.css" rel="stylesheet" />
     <title>EduConnect</title>
 </head>
 
 <body>
     <div class="boxGeral">
         <div class="boxLogin">
-            <img src="/images/logo.png" alt="Logo EduConnect">
+            <img src="/img/logo.png" alt="Logo EduConnect">
             <h1>Login</h1>
             <p>Se não tiver uma conta registrada<br>Você pode <a class="mudardepag" href="cadastro.html">Registrar aqui!</a></p>
             
@@ -34,7 +34,7 @@
             </form>
         </div>
         <div class="boxImagem">
-            <img src="/images/persona.png" alt="Persona">
+            <img src="/img/persona.png" alt="Persona">
         </div>
     </div>
 
