--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,7 @@
                     <p class="logoNome">EduConnect</p>
                 </div>
                 <div class="menu">
-                    <li><a href="index.html"><img src="img/home icone.png">Home</a></li>
-                    <li><a href="#aprender"><img src="img/foguete incone.png">Aprender</a></li>
+                    <li><a href="home.html"><img src="img/home icone.png">Home</a></li>
                     <li><a href="praticar.html"><img src="img/home icone.png">Praticar</a></li>
                 </div>
             </ul>
