--- a/home.html
+++ b/home.html
@@ -13,13 +13,13 @@
         <nav>
             <ul class="teste">
                 <div class="logo">
-                    <img src="img/logo.png" />
+                    <img src="img/LogoHome.png" />
                 </div>
                 <div class="textoMenu">
                     <p class="logoNome">EduConnect</p>
                 </div>
                 <div class="menu">
-                    <li><a href="index.html"><img src="img/home icone.png">Home</a></li>
+                    <li><a href="home.html"><img src="img/home icone.png">Home</a></li>
                     <li><a href="#aprender"><img src="img/foguete incone.png">Aprender</a></li>
                     <li><a href="praticar.html"><img src="img/peso icone.png">Praticar</a></li>
                 </div>
@@ -280,10 +280,8 @@
 
     <footer>
         <ul>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Sua conta</a></li>
-            <li><a href="#">Configurações</a></li>
-            <li><a href="#">Sair da conta</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="login.html">Sair da conta</a></li>
         </ul>
     </footer>
 </body>
