--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
 <body>
     <div class="boxGeral">
         <div class="boxLogin">
-            <img src="/img/logo.png" alt="Logo EduConnect">
+            <img src="/img/LogoHome.png" alt="Logo EduConnect">
             <h1>Login</h1>
             <p>Se não tiver uma conta registrada<br>Você pode <a class="mudardepag" href="cadastro.html">Registrar aqui!</a></p>
             
@@ -29,7 +29,7 @@
                     <input type="checkbox" name="minhaCheckbox">
                     lembrar-me
                 </label>
-                <input class="button" type="submit" value="Enviar">
+                <input class="button" type="submit" value="Enviar"><a href="home.html"></a>
                 
             </form>
         </div>
