--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <div class="logo">
-                    <img src="img/Logo.png" />
+                    <img src="img/LogoHome.png" />
                 </div>
                 <div class="textoMenu">
                     <p class="logoNome">EduConnect</p>
