att logo cadastro

--- a/cadastro.html
+++ b/cadastro.html
@@ -15,7 +15,7 @@
 <body>
     <div class="boxGeral">
         <div class="boxLogin">
-            <img src="/img/logo.png" alt="Logo EduConnect">
+            <img src="/img/LogoHome.png" alt="Logo EduConnect">
             <h1>Cadastrar</h1>
             <p>Já tem uma conta? <a class="mudardepag" href="login.html">Faça login aqui!</a></p>
             
